<resources>
    <string name="app_name">WGU Student Progress Tracker</string>
    <string name="wgu">WGU</string>
    <string name="student_progress_tracker">Student Progress Tracker</string>
    <string name="enter">Enter</string>
    <string name="title_activity_term">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="action_add_sample_data">Add Sample Data</string>
    <string name="delete_all_notes">Delete All Terms</string>
    <string name="term_courses">Term Courses</string>
    <string name="add_course">Add Course</string>
    <string name="add_mentor">Add Mentor</string>
    <string name="delete_term">Delete Term</string>
    <string name="course_name">Course Name</string>
    <string name="end_date">End date:</string>
    <string name="start_date">Start date:</string>
    <string name="status">Status</string>
    <string name="status_inProgress">In Progress</string>
    <string name="course_mentor">Course Mentor</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_hint">5555555555</string>
    <string name="submit">Submit</string>
    <string name="terms_error">Terms may not be deleted if courses are assigned to it</string>
    <string name="term_courses_heading">Term Courses</string>
    <string name="update">Update</string>
    <string name="title_activity_notes_activty">NotesActivty</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="course_notes">Course Notes</string>
    <string name="NOTE_ID_KEY">note_id_key</string>
    <string name="note_edit_hint">Enter note here</string>
    <string name="to_example_example_com">To: example@example.com</string>
    <string name="message">Message:</string>
    <string name="send_note_as_email">Send note as email</string>
    <string name="note_sent_via_email_subject">Note sent via email</string>
    <string name="assessment_type">Assessment Type</string>
    <string name="assessment_title">Assessment Title</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="goal_date">Goal Date</string>
    <string name="edit_assessment">Edit Assessment</string>
    <string name="new_assessment">New Assessment</string>
    <string name="check_progress">Check Progress</string>
    <string name="courses">Courses</string>
    <string name="pending_status">Pending:</string>
    <string name="passed_status">Passed:</string>
    <string name="failed_status">Failed:</string>
    <string name="assessments">Assessments</string>
    <string name="in_progress">In Progress:</string>
    <string name="plan_to_take">Plan To Take:</string>
    <string name="completed">Completed:</string>
    <string name="dropped">Dropped:</string>
    <string name="track_progress">Track Progress</string>
    <string name="delete_assessment">Delete Assessment</string>
    <string name="sample_notification">Sample notification</string>
    <string name="clear_database">Clear database</string>
    <string name="upcoming_courses">Upcoming Courses</string>
    <string name="upcoming_assessments">Upcoming Assessments</string>
    <string name="reports">Reports</string>
    <string name="generate_class_report">Generate Class Report</string>
    <string name="create_term">Create Term</string>
</resources>