<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/termCoursesHeading"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TermCourses">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/term_courses"
        android:textColor="@color/wgu"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <Button
        android:id="@+id/addCourseBtn"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_margin="@dimen/fab_margin"
        android:background="@color/wgu"
        android:text="@string/add_course"
        android:textColor="#FBFBFB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.826" />

    <Button
        android:id="@+id/addMentorBtn"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginEnd="4dp"
        android:background="@color/wgu"
        android:text="@string/add_mentor"
        android:textColor="#FFFCFC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.826" />

    <Button
        android:id="@+id/deleteTermBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:background="#E10A0A"
        android:text="@string/delete_term"
        android:textColor="#F8F6F6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCourseBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>