<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProgressActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="122dp"
        android:layout_height="27dp"
        android:text="@string/assessments"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/droppedStatus"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="123dp"
        android:layout_height="24dp"
        android:text="@string/pending_status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.028" />

    <TextView
        android:id="@+id/pendingStatusDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="122dp"
        android:layout_height="24dp"
        android:text="@string/passed_status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/passedStatusDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="124dp"
        android:layout_height="25dp"
        android:text="@string/failed_status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.027" />

    <TextView
        android:id="@+id/failedStatusDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.037" />

    <TextView
        android:id="@+id/coursesHeader"
        android:layout_width="129dp"
        android:layout_height="22dp"
        android:text="@string/courses"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/inProgressStatus"
        android:layout_width="123dp"
        android:layout_height="24dp"
        android:text="@string/in_progress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coursesHeader"
        app:layout_constraintVertical_bias="0.028" />

    <TextView
        android:id="@+id/courseStatusDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toEndOf="@+id/inProgressStatus"
        app:layout_constraintTop_toBottomOf="@+id/coursesHeader"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/planToTakeStatus"
        android:layout_width="123dp"
        android:layout_height="24dp"
        android:text="@string/plan_to_take"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inProgressStatus"
        app:layout_constraintVertical_bias="0.028" />

    <TextView
        android:id="@+id/planToTakeStatusDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toEndOf="@+id/planToTakeStatus"
        app:layout_constraintTop_toBottomOf="@+id/inProgressStatus"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/completedStatus"
        android:layout_width="123dp"
        android:layout_height="24dp"
        android:text="@string/completed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planToTakeStatus"
        app:layout_constraintVertical_bias="0.028" />

    <TextView
        android:id="@+id/completedStatusDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toEndOf="@+id/completedStatus"
        app:layout_constraintTop_toBottomOf="@+id/planToTakeStatus"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/droppedStatus"
        android:layout_width="123dp"
        android:layout_height="24dp"
        android:text="@string/dropped"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/completedStatus"
        app:layout_constraintVertical_bias="0.028" />

    <TextView
        android:id="@+id/droppedStatusDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toEndOf="@+id/droppedStatus"
        app:layout_constraintTop_toBottomOf="@+id/completedStatus"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/upcomingCoursesHead"
        android:layout_width="140dp"
        android:layout_height="25dp"
        android:text="@string/upcoming_courses"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.05" />

    <ListView
        android:id="@+id/coursesList"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upcomingCoursesHead"
        app:layout_constraintVertical_bias="0.027" />

    <TextView
        android:id="@+id/upcomingAssessmentsHead"
        android:layout_width="229dp"
        android:layout_height="23dp"
        android:text="@string/upcoming_assessments"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coursesList"
        app:layout_constraintVertical_bias="0.084" />

    <ListView
        android:id="@+id/assessmentList"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upcomingAssessmentsHead"
        app:layout_constraintVertical_bias="0.094" />

</androidx.constraintlayout.widget.ConstraintLayout>